docs: optimize build extension

--- a/packages/document/docs/en/guide/advanced/extend-build.mdx
+++ b/packages/document/docs/en/guide/advanced/extend-build.mdx
@@ -43,6 +43,8 @@ import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
   markdown: {
+    // It's necessary to use JS version compiler
+    mdxRs: false,
     remarkPlugins: [
       [
         require('remark-autolink-headings'),
@@ -58,6 +60,6 @@ export default defineConfig({
 
 :::warning
 
-Only the JS version of the MDX compiler supports compilation plugins. This means that if you have enabled the mdx-rs compiler, you need to remove the `markdown.experimenalMdxRs: true` configuration item in rspress config file.
+Only the JS version of the MDX compiler supports compilation plugins.
 
 :::
