--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -205,7 +205,7 @@ export default defineConfig({
 ## outlineTitle
 
 - Type: `string`
-- Default: 'ON THIS PAGE'
+- Default: `'ON THIS PAGE'`
 
 在右侧边栏中配置大纲的标题。
 
@@ -436,7 +436,7 @@ export default defineConfig({
 - Type: `"always" | "auto" | "never"`
 - Default: `never`
 
-控制隐藏导航栏行为。默认情况下，导航栏总是显示。你可以设置为 `auto` 来实现页面向下滚动时导航栏自动隐藏。，或者设置为 `always` 来总是**隐藏导航栏**。
+控制隐藏导航栏行为。默认情况下，导航栏总是显示。你可以设置为 `auto` 来实现页面向下滚动时导航栏自动隐藏，或者设置为 `always` 来总是**隐藏导航栏**。
 
 。比如：
 
