--- a/packages/document/docs/zh/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-theme.mdx
@@ -137,7 +137,7 @@ const setup = () => {};
 
 // 导出 Layout 组件和 setup 函数
 // 两者必须导出
-export { Layout, setup };
+export default { Layout, setup };
 ```
 
 这个 Layout 组件会被用来渲染整个文档站点的布局，你可以在这个组件中引入你的自定义组件，比如:
