Update custom-theme.mdx (en version)

--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -138,7 +138,7 @@ const setup = () => {};
 
 // Export Layout component and setup function
 // Note: both must export
-export { Layout, setup };
+export default { Layout, setup };
 ```
 
 Layout component will be used to render the layout of the entire document site, you can introduce your custom components in this component, for example:
