docs: add themeConfig.search doc

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -483,3 +483,20 @@ export default defineConfig({
   },
 });
 ```
+
+## search
+
+- Type: `boolean`
+- Default: `true`
+
+Whether to display the search box. for example:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    search: false,
+  },
+});
+```
