--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -468,3 +468,20 @@ export default defineConfig({
   },
 });
 ```
+
+## search
+
+- Type: `boolean`
+- Default: `true`
+
+是否显示搜索框。比如：
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    search: false,
+  },
+});
+```
