--- a/packages/document/docs/zh/api/config/config-build.mdx
+++ b/packages/document/docs/zh/api/config/config-build.mdx
@@ -165,9 +165,9 @@ export default defineConfig({
 
 ### markdown.highlightLanguages
 
-- Type: `string[]`
+- Type: `(string | [string, string])[]`
 
-注册语言高亮。比如：
+注册需要高亮的语言。比如：
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
@@ -175,7 +175,14 @@ import path from 'path';
 
 export default defineConfig({
   markdown: {
-    highlightLanguages: ['ejs', 'go'],
+    highlightLanguages: [
+      'ejs',
+      'go',
+      // 别名为 md, 全名为 markdown
+      ['md', 'markdown'],
+    ],
   },
 });
 ```
+
+每项语言的配置支持 `string` 和 `[string, string]` 两种格式，在数组的格式下，前者为语言的别名，后者为语言的全名，你可以前往[文件列表](https://github.com/react-syntax-highlighter/react-syntax-highlighter/tree/master/src/languages/prism)查看所有支持的语言全名。
