--- a/packages/document/docs/en/api/config/config-build.mdx
+++ b/packages/document/docs/en/api/config/config-build.mdx
@@ -162,3 +162,27 @@ Then you can use the `Alert` component in any MDX file:
 :::danger Danger
 Please set `markdown.mdxRs` to `false` when configuring `globalComponents`, otherwise the global components will not take effect.
 :::
+
+### markdown.highlightLanguages
+
+- Type: `(string | [string, string])[]`
+
+Register the languages that need to be highlighted. The default supported languages include `js`, `jsx`, `ts`, `tsx`, `json`, `css`, `scss`, `less`, `xml`, `diff`, `yaml`, `md`, `mdx`. You can extend based on these languages. For example:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+import path from 'path';
+
+export default defineConfig({
+  markdown: {
+    highlightLanguages: [
+      'ejs',
+      'go',
+      // Alias as md, full name as markdown
+      ['md', 'markdown'],
+    ],
+  },
+});
+```
+
+Each language config supports both `string` and `[string, string]` formats. In the array format, the former is the alias of the language, and the latter is the full name of the language. You can go to the [file list](https://github.com/react-syntax-highlighter/react-syntax-highlighter/tree/master/src/languages/prism) to view all supported language full names.
