--- a/packages/document/docs/zh/api/config/config-build.mdx
+++ b/packages/document/docs/zh/api/config/config-build.mdx
@@ -162,3 +162,27 @@ export default defineConfig({
 :::danger 警告
 请在配置 `globalComponents` 时设置 `markdown.mdxRs` 为 `false` 以开启 JS 版本的编译器，否则会导致全局组件不生效。
 :::
+
+### markdown.highlightLanguages
+
+- Type: `(string | [string, string])[]`
+
+注册需要高亮的语言。默认支持的语言包括`js`、`jsx`、`ts`、`tsx`、`json`、`css`、`scss`、`less`、`xml`、`diff`、`yaml`、`md`、`mdx`，你可以在这些语言的基础上进行扩展。比如：
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+import path from 'path';
+
+export default defineConfig({
+  markdown: {
+    highlightLanguages: [
+      'ejs',
+      'go',
+      // 别名为 md, 全名为 markdown
+      ['md', 'markdown'],
+    ],
+  },
+});
+```
+
+每项语言的配置支持 `string` 和 `[string, string]` 两种格式，在数组的格式下，前者为语言的别名，后者为语言的全名，你可以前往[文件列表](https://github.com/react-syntax-highlighter/react-syntax-highlighter/tree/master/src/languages/prism)查看所有支持的语言全名。
