chore: Update write-a-plugin.mdx
typing mistake

--- a/packages/document/docs/en/plugin/system/write-a-plugin.mdx
+++ b/packages/document/docs/en/plugin/system/write-a-plugin.mdx
@@ -50,7 +50,7 @@ In the above example, we define a plugin named `plugin-example`, which will defi
 Register plugins via `doc.plugins` in `rspress.config.ts`:
 
 ```tsx title="rspress.config.ts"
-import { pluginExample } from './plugin';
+import { pluginMonitor } from './plugin';
 
 export default {
   plugins: [pluginMonitor('test')],
