--- a/packages/document/docs/zh/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx.mdx
@@ -218,6 +218,22 @@ export default {
 };
 ```
 
+## 自定义锚点 id
+
+默认情况下，Rspress 会根据各个标题的内容自动生成 id，这个 id 也会作为锚点的内容，你可以通过如下的语法来自定义 header 的 id:
+
+```md
+## Hello World {#custom-id}
+```
+
+其中 `custom-id` 就是你自定义的 id。
+
+:::warning 注意
+
+目前，该功能在你设置 `markdown.mdxRs` 为 `false` 时不可用。
+
+:::
+
 ## 关闭 Rust 版本编译器
 
 默认情况下，Rspress 使用 Rust 版本的 MDX 编译器，但是在某些情况下，你需要添加自定义的 MDX 编译插件，此时你可以通过如下的配置关闭 Rust 版本的 MDX 编译器，从而切换到 JavaScript 版本的编译器:
