feat: support ssg config

--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -351,3 +351,18 @@ export default defineConfig({
   },
 });
 ```
+
+## ssg
+
+- Type: `boolean`
+- Default: `true`
+
+Determines whether to enable Static Site Generation. It is enabled by default, but you can disable it by setting `ssg` to `false`.
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  ssg: false,
+});
+```
