feat: add support HTML to frontmatter hero config

--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -86,6 +86,26 @@ hero:
 ---
 ```
 
+Or you can use `HTML` to specify the hero config for the page:
+
+```yaml
+---
+pageType: home
+
+hero:
+  name: <span class="hero-name">Rspress</span>
+  text: <span class="hero-text">A documentation solution</span>
+  tagline: <span class="hero-tagline">A modern documentation development technology stack</span>
+  actions:
+    - theme: brand
+      text: <span class="hero-actions-text">Introduction</span>
+      link: /zh/guide/introduction
+    - theme: alt
+      text: <span class="hero-actions-text">Quick Start</span>
+      link: /zh/guide/getting-started
+---
+```
+
 ## features
 
 - Type: `Array`
