--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -86,6 +86,26 @@ hero:
 ---
 ```
 
+或者你也可以用 `HTML` 来指定页面的 hero config：
+
+```yaml
+---
+pageType: home
+
+hero:
+  name: <span class="hero-name">Rspress</span>
+  text: <span class="hero-text">文档工程解决方案</span>
+  tagline: <span class="hero-tagline">现代化文档开发技术栈</span>
+  actions:
+    - theme: brand
+      text: <span class="hero-actions-text">介绍</span>
+      link: /zh/guide/introduction
+    - theme: alt
+      text: <span class="hero-actions-text">快速开始</span>
+      link: /zh/guide/getting-started
+---
+```
+
 ## features
 
 - Type: `Array`
