--- a/packages/document/docs/zh/api/commands.mdx
+++ b/packages/document/docs/zh/api/commands.mdx
@@ -12,6 +12,8 @@ Usage: rspress dev [root] [options]
 Options:
   root                  指定文档根目录，默认为当前工作目录下的 docs 目录，可选
   -c --config <config>  指定配置文件路径，可以为相对路径或绝对路径
+  --port <port>         指定端口号
+  --host <host>         指定 host
   -h, --help            显示命令帮助
 ```
 
