fix: :pencil2: fixed typo

--- a/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
@@ -90,7 +90,7 @@ When the type is `string`, it means that the item is a file, and the file name i
 
 The file name may or may not have a suffix, for example `introduction` will be parsed as `introduction.mdx`.
 
-### obejct
+### object
 
 When the type is an object, you can describe it as a file, a directory or a custom link.
 
