--- a/packages/document/docs/en/guide/basic/custom-page.mdx
+++ b/packages/document/docs/en/guide/basic/custom-page.mdx
@@ -132,9 +132,10 @@ import PageType from '@en/fragments/page-type';
 
 In addition to the `pageType` page layout level configuration, Rspress also provides more fine-grained switches. You can configure other fields in the frontmatter. These fields and their meanings are as follows:
 
-- `navbar`: Whether to display the sidebar. When you want to hide the top navigation bar, you can set it to `false`.
+- `navbar`: Whether to display the top navigation bar. When you want to hide the top navigation bar, you can set it to `false`.
 - `sidebar`: Whether to display the sidebar. When you want to hide the sidebar, you can set it to `false`.
 - `outline`: Whether to display the outline column. When you want to hide the outline column, you can set it to `false`.
+- `footer`: Whether to display the footer. When you want to hide the footer, you can set it to `false`.
 
 Example:
 
