--- a/packages/document/docs/zh/guide/basic/custom-page.mdx
+++ b/packages/document/docs/zh/guide/basic/custom-page.mdx
@@ -133,7 +133,7 @@ import PageType from '@zh/fragments/page-type';
 
 除了 `pageType` 页面布局级别的配置之外，Rspress 还提供了更细粒度的开关，你可以在 frontmatter 配置其它的字段，这些字段及其含义如下：
 
-- `navbar`：是否展示侧边栏，当你想要隐藏顶部导航栏时，可以配置为 `false`；
+- `navbar`：是否展示顶部导航栏，当你想要隐藏顶部导航栏时，可以配置为 `false`；
 - `sidebar`：是否展示侧边栏，当你想要隐藏侧边栏时，可以配置为 `false`；
 - `outline`：是否展示大纲栏，当你想要隐藏大纲栏时，可以配置为 `false`；
 - `footer`：是否展示页脚，当你想要隐藏页脚时，可以配置为 `false`；
