--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -82,11 +82,20 @@ export default App;
 ```
 ````
 
+If you have set `defaultInternalBehavior` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
+
+````md
+```tsx playground
+function App() {
+  return <div>Hello World</div>;
+}
+export default App;
+```
+````
+
 :::tip Tip
 Make sure the document ends with `.mdx`.
 :::
-
-In this way, the code block will not be rendered as a component, but will be kept as it is.
 
 ### External Components
 
@@ -202,3 +211,10 @@ The full document can be found at [suren-atoyan/monaco-loader](https://github.co
 ### monacoOptions
 
 Configure monaco editor, corresponding to [IStandaloneEditorConstructionOptions](https://microsoft.github.io/monaco-editor/typedoc/interfaces/editor.IStandaloneEditorConstructionOptions.html)
+
+### defaultInternalBehavior
+
+The default behavior of rendering internal code blocks that do not have the `pure` or `playground` identifiers declared by users, defaulting to `playground`.
+
+- `pure`: render as regular code block
+- `playground`: render as Playground component
