--- a/packages/document/docs/en/plugin/system/plugin-api.mdx
+++ b/packages/document/docs/en/plugin/system/plugin-api.mdx
@@ -90,9 +90,9 @@ import GlobalUIComponents from '../../fragments/global-ui-components.mdx';
 
 ### builderConfig
 
-- **Type**：`BuilderConfig`
+- **Type**：`RsbuildConfig`
 
-The bottom layer of Rspress is based on the Rspack mode of [Modern.js Builder](https://modernjs.dev/builder/) for document build process. The Builder can be configured through `builderConfig`. For specific configuration options, please refer to [Modern.js Builder](https://modernjs.dev/builder/api/index.html).
+The bottom layer of Rspress is based [Rsbuild](https://github.com/web-infra-dev/rsbuild) for document build process. The Rsbuild can be configured through `builderConfig`. For specific configuration options, please refer to [Rsbuild(https://rsbuild.dev/config/).
 
 > Of course, if you want to configure Rspack directly, you can also configure it through `buildConfig.tools.rspack`.
 
