--- a/packages/document/docs/zh/api/config/config-build.mdx
+++ b/packages/document/docs/zh/api/config/config-build.mdx
@@ -4,7 +4,7 @@
 
 - Type: `Object`
 
-用于自定义 Modern.js Builder 的配置项，完整配置项请查看 [Modern.js Builder - API](https://modernjs.dev/builder/api/index.html)。
+用于自定义 Rsbuild 的配置项，完整配置项请查看 [Rsbuild - 配置](https://rsbuild.dev/zh/config/)。
 
 比如，将产物目录修改为 `doc_dist`：
 
@@ -22,30 +22,30 @@ export default defineConfig({
 
 ## builderPlugins
 
-- Type: `BuilderPlugin[]`
+- Type: `RsbuildPlugin[]`
 
-用于加入 [Modern.js Builder 的插件](https://modernjs.dev/builder/plugins/introduction.html)，比如：
+用于加入 [Rsbuild 的插件](https://rsbuild.dev/zh/plugins/list/)，比如：
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
-import { builderPluginStylus } from '@rspress/builder-plugin-stylus';
+import { pluginStylus } from '@rsbuild/plugin-stylus';
 
 export default defineConfig({
-  builderPlugins: [builderPluginStylus()],
+  builderPlugins: [pluginStylus()],
 });
 ```
 
 ### 默认配置
 
-如果你需要查看默认的 `builderConfig`，可以在执行 `rspress dev` 或 `rspress build` 命令时，添加 `DEBUG=builder` 参数：
+如果你需要查看默认的 `builderConfig`，可以在执行 `rspress dev` 或 `rspress build` 命令时，添加 `DEBUG=rsbuild` 参数：
 
 ```bash
-DEBUG=builder rspress dev
+DEBUG=rsbuild rspress dev
 ```
 
-在执行后，`doc_build` 目录下会生成 `builder.config.js` 文件，里面包含了完整的 `builderConfig`。
+在执行后，`doc_build` 目录下会生成 `rsbuild.config.js` 文件，里面包含了完整的 `builderConfig`。
 
-> 请查看 [Modern.js Builder - 调试模式](https://modernjs.dev/builder/guide/debug/debug-mode.html) 来了解更多调试 Builder 的方法。
+> 请查看 [Rsbuild - 调试模式](https://rsbuild.dev/zh/guide/debug/debug-mode) 来了解更多调试 Rsbuild 的方法。
 
 ## markdown
 
