--- a/packages/document/docs/zh/plugin/system/plugin-api.mdx
+++ b/packages/document/docs/zh/plugin/system/plugin-api.mdx
@@ -91,11 +91,11 @@ import GlobalUIComponents from '../../fragments/global-ui-components.mdx';
 
 ### builderConfig
 
-- **类型**：`BuilderConfig`
+- **类型**：`RsbuildConfig`
 
-Rspress 底层基于 [Modern.js Builder](https://modernjs.dev/builder/) 的 Rspack 模式来进行文档构建。通过 `builderConfig` 可以对 Builder 进行配置，具体的配置项可以参考 [Modern.js Builder](https://modernjs.dev/builder/api/index.html)。
+Rspress 底层基于 [Rsbuild](https://github.com/web-infra-dev/rsbuild) 来进行文档构建。通过 `builderConfig` 可以对 Rsbuild 进行配置，具体的配置项可以参考 [Rsbuild - 配置](https://rsbuild.dev/zh/config/)。
 
-> 当然，如果你想要直接配置 Rspack，也可以通过 `buildConfig.tools.rspack` 进行配置。
+> 当然，如果你想要直接配置 Rspack，也可以通过 `builderConfig.tools.rspack` 进行配置。
 
 ```tsx title="plugin.ts"
 import { RspressPlugin } from '@rspress/shared';
