--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -35,7 +35,7 @@ After adding this plugin, please set `markdown.mdxRs` to `false`, otherwise it w
 
 The component code of internal components is declared in the mdx file. You can declare the following code block in the mdx file:
 
-````md
+````mdx
 ```tsx
 function App() {
   return <div>Hello World</div>;
@@ -49,7 +49,7 @@ It's worth noting that you need to export the component as default, and Rspress 
 
 But if you want to keep the style of the code block instead of rendering it as a component, you can add the `pure` identifier to specify, the usage is as follows:
 
-````md pure
+````mdx
 ```tsx pure
 function App() {
   return <div>Hello World</div>;
@@ -116,6 +116,7 @@ The effect of `fixed` mode is as follows:
 **experimental feature** that enables opening demos in Codesandbox. Currently not supported when `iframePosition` is set to `fixed`.
 
 There are still some limitations with this feature:
+
 - You cannot customize sandbox dependencies: Default dependencies will be only `react`, `react-dom`, and `self`. This means you cannot import other dependencies in your demo,
-and you need to ensure that `self` is published to npm, which is suitable for projects that are modular in nature.
+  and you need to ensure that `self` is published to npm, which is suitable for projects that are modular in nature.
 - You cannot customize files: This means you cannot import other files in your demo.
