--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -40,7 +40,7 @@ It is recommended to use js or jsx to write sample code to avoid ts type errors 
 
 The component code of internal components is declared in the mdx file. This plugin supports jsx and tsx. You can declare the following code block in the mdx file:
 
-````md
+````mdx
 ```jsx
 import React from 'react';
 
@@ -54,7 +54,7 @@ export default App;
 
 Otherwise, You can use `direction` parameter to specify the playground layout, `horizontal` and `vertical` are supported:
 
-````md
+````mdx
 ```jsx direction=vertical
 import React from 'react';
 
@@ -70,7 +70,7 @@ It's worth noting that you need to export the component as default, and Rspress 
 
 But if you want to keep the style of the code block instead of rendering it as a component, you can add the `pure` identifier to specify, the usage is as follows:
 
-````md pure
+````mdx
 ```tsx pure
 import React from 'react';
 
@@ -84,7 +84,7 @@ export default App;
 
 If you have set `defaultInternalBehavior` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
 
-````md
+````mdx
 ```tsx playground
 function App() {
   return <div>Hello World</div>;
