fix: code tag in nested jsx structure cannot be parsed in preview/playground plugin

--- a/e2e/fixtures/plugin/doc/components/guide.mdx
+++ b/e2e/fixtures/plugin/doc/components/guide.mdx
@@ -1,6 +1,6 @@
 # Guide
 
-```tsx
+```jsx
 import React from 'react';
 
 export default function HelloWorld() {
@@ -8,10 +8,12 @@ export default function HelloWorld() {
 }
 ```
 
-```tsx
+```jsx
 import React from 'react';
 
 export default function HelloWorld() {
   return <div>World</div>;
 }
 ```
+
+<code src="./component.jsx" />
