--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -82,7 +82,7 @@ export default App;
 ```
 ````
 
-If you have set `defaultInternalBehavior` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
+If you have set `defaultRenderMode` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
 
 ````mdx
 ```tsx playground
@@ -212,9 +212,9 @@ The full document can be found at [suren-atoyan/monaco-loader](https://github.co
 
 Configure monaco editor, corresponding to [IStandaloneEditorConstructionOptions](https://microsoft.github.io/monaco-editor/typedoc/interfaces/editor.IStandaloneEditorConstructionOptions.html)
 
-### defaultInternalBehavior
+### defaultRenderMode
 
-The default behavior of rendering internal code blocks that do not have the `pure` or `playground` identifiers declared by users, defaulting to `playground`.
+The default mode of rendering internal code blocks that do not have the `pure` or `playground` identifiers declared by users, defaulting to `playground`.
 
 - `pure`: render as regular code block
 - `playground`: render as Playground component
