--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -58,7 +58,7 @@ export default App;
 ```
 ````
 
-If you have set `defaultInternalBehavior` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
+If you have set `defaultRenderMode` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
 
 ````mdx
 ```tsx preview
@@ -100,7 +100,7 @@ interface PreviewOptions {
   isMobile?: boolean;
   iframePosition?: 'fixed' | 'follow';
   enableCodesandbox?: boolean;
-  defaultInternalBehavior?: 'pure' | 'preview';
+  defaultRenderMode?: 'pure' | 'preview';
 }
 ```
 
@@ -132,9 +132,9 @@ There are still some limitations with this feature:
   and you need to ensure that `self` is published to npm, which is suitable for projects that are modular in nature.
 - You cannot customize files: This means you cannot import other files in your demo.
 
-### defaultInternalBehavior
+### defaultRenderMode
 
-The default behavior of rendering internal code blocks that do not have the `pure` or `preview` identifiers declared by users, defaulting to `preview`.
+The default mode of rendering internal code blocks that do not have the `pure` or `preview` identifiers declared by users, defaulting to `preview`.
 
 - `pure`: render as regular code block
 - `preview`: render as component
