--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -40,7 +40,7 @@ It is recommended to use js or jsx to write sample code to avoid ts type errors 
 
 The component code of internal components is declared in the mdx file. This plugin supports jsx and tsx. You can declare the following code block in the mdx file:
 
-````md
+````mdx
 ```jsx
 import React from 'react';
 
@@ -54,7 +54,7 @@ export default App;
 
 Otherwise, You can use `direction` parameter to specify the playground layout, `horizontal` and `vertical` are supported:
 
-````md
+````mdx
 ```jsx direction=vertical
 import React from 'react';
 
@@ -70,7 +70,7 @@ It's worth noting that you need to export the component as default, and Rspress 
 
 But if you want to keep the style of the code block instead of rendering it as a component, you can add the `pure` identifier to specify, the usage is as follows:
 
-````md pure
+````mdx
 ```tsx pure
 import React from 'react';
 
@@ -82,11 +82,20 @@ export default App;
 ```
 ````
 
+If you have set `defaultRenderMode` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
+
+````mdx
+```tsx playground
+function App() {
+  return <div>Hello World</div>;
+}
+export default App;
+```
+````
+
 :::tip Tip
 Make sure the document ends with `.mdx`.
 :::
-
-In this way, the code block will not be rendered as a component, but will be kept as it is.
 
 ### External Components
 
@@ -202,3 +211,10 @@ The full document can be found at [suren-atoyan/monaco-loader](https://github.co
 ### monacoOptions
 
 Configure monaco editor, corresponding to [IStandaloneEditorConstructionOptions](https://microsoft.github.io/monaco-editor/typedoc/interfaces/editor.IStandaloneEditorConstructionOptions.html)
+
+### defaultRenderMode
+
+The default mode of rendering internal code blocks that do not have the `pure` or `playground` identifiers declared by users, defaulting to `playground`.
+
+- `pure`: render as regular code block
+- `playground`: render as Playground component
