--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -58,11 +58,20 @@ export default App;
 ```
 ````
 
+If you have set `defaultRenderMode` to `'pure'`, Rspress will not render this component by default, but instead display it as a code block. If you want to render a code block as a component in this situation, you can do add the `preview` identifier to specify, the usage is as follows:
+
+````mdx
+```tsx preview
+function App() {
+  return <div>Hello World</div>;
+}
+export default App;
+```
+````
+
 :::tip Tip
 Make sure the document ends with `.mdx`.
 :::
-
-In this way, the code block will not be rendered as a component, but will be kept as it is.
 
 ### External Components
 
@@ -88,8 +97,10 @@ This plugin accepts an object parameter of the following type:
 
 ```ts
 interface PreviewOptions {
-  isMobile: boolean;
-  iframePosition: 'follow' | 'fixed';
+  isMobile?: boolean;
+  iframePosition?: 'fixed' | 'follow';
+  enableCodesandbox?: boolean;
+  defaultRenderMode?: 'pure' | 'preview';
 }
 ```
 
@@ -120,3 +131,10 @@ There are still some limitations with this feature:
 - You cannot customize sandbox dependencies: Default dependencies will be only `react`, `react-dom`, and `self`. This means you cannot import other dependencies in your demo,
   and you need to ensure that `self` is published to npm, which is suitable for projects that are modular in nature.
 - You cannot customize files: This means you cannot import other files in your demo.
+
+### defaultRenderMode
+
+The default mode of rendering internal code blocks that do not have the `pure` or `preview` identifiers declared by users, defaulting to `preview`.
+
+- `pure`: render as regular code block
+- `preview`: render as component
