feat: support wrap in code block

--- a/packages/document/docs/en/api/config/config-build.mdx
+++ b/packages/document/docs/en/api/config/config-build.mdx
@@ -136,6 +136,12 @@ import MdxRs from '../../fragments/mdx-rs';
 
 Whether to display the line number of the code block. Defaults to `false`.
 
+### markdown.defaultWrapCode
+
+- Type: `boolean`
+
+Whether to enable long code line wrapping display by default. Defaults to `false`.
+
 ### markdown.globalComponents
 
 - Type: `string[]`
