--- a/packages/document/docs/zh/api/config/config-build.mdx
+++ b/packages/document/docs/zh/api/config/config-build.mdx
@@ -136,6 +136,12 @@ import MdxRs from '../../fragments/mdx-rs';
 
 是否显示代码块的行号。默认为 `false`。
 
+### markdown.defaultWrapCode
+
+- Type: `boolean`
+
+是否默认启用长代码换行展示。默认为 `false`。
+
 ### markdown.globalComponents
 
 - Type: `string[]`
