--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -55,7 +55,7 @@ export default defineConfig({
 });
 ```
 
-当然 `nav` 数组中也可以配置多级菜单，类型如下:
+Of course, multi-level menus can also be configured in the `nav` array with the following types:
 
 ```ts
 interface NavGroup {
