--- a/packages/document/docs/en/guide/advanced/extend-build.mdx
+++ b/packages/document/docs/en/guide/advanced/extend-build.mdx
@@ -18,7 +18,7 @@ export default defineConfig({
     },
     tools: {
       rspack(options) {
-        // 修改 rspack 的配置
+        // change rspack's options
       },
     },
   },
