feat: markdown hightlight default support bash syntax

--- a/packages/document/docs/en/api/config/config-build.mdx
+++ b/packages/document/docs/en/api/config/config-build.mdx
@@ -167,7 +167,7 @@ Please set `markdown.mdxRs` to `false` when configuring `globalComponents`, othe
 
 - Type: `(string | [string, string])[]`
 
-Register the languages that need to be highlighted. The default supported languages include `js`, `jsx`, `ts`, `tsx`, `json`, `css`, `scss`, `less`, `xml`, `diff`, `yaml`, `md`, `mdx`. You can extend based on these languages. For example:
+Register the languages that need to be highlighted. The default supported languages include `js`, `jsx`, `ts`, `tsx`, `json`, `css`, `scss`, `less`, `xml`, `diff`, `yaml`, `md`, `mdx`, `bash`. You can extend based on these languages. For example:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
