--- a/packages/document/docs/en/guide/basic/deploy.mdx
+++ b/packages/document/docs/en/guide/basic/deploy.mdx
@@ -165,7 +165,7 @@ If you want to bind your site to your own domain, you can configure it in the `D
 
 ### Deploy to Kinsta Static Site Hosting
 
-You can deploy your Vite app as a Static Site on [Kinsta](https://kinsta.com/static-site-hosting/).
+You can deploy your Rspress on [Kinsta](https://kinsta.com/static-site-hosting/).
 
 1. Login or create an account to view your [MyKinsta](https://my.kinsta.com/) dashboard.
 
